examples/test/testpolicy1350.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1350
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key4: value5
      key8: value10
      key2: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value39
      podSelector:
        matchLabels:
          key29: value26
